k8s-yamls-master/k8s-yamls-master/live/All-Clusters-BASE-REQUIRED/dashboard/caprod/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/dash)$ $1/ permanent;
  name: kubernetes-dashboard-tls
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: k8caprod.medimpact.com
    http:
      paths:
      - path: /dash/?(.*)
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
  tls:
  - hosts:
    - k8caprod.medimpact.com
